# aoc2024

./: README.md
cpp/: .gitignore  Makefile.am  README.md  configure.ac
cpp/day1/: main.cpp
cpp/day10/: main.cpp
cpp/day11/: main.cpp
cpp/day12/: main.cpp
cpp/day13/: main.cpp
cpp/day14/: main.cpp
cpp/day2/: main.cpp
cpp/day3/: main.cpp
cpp/day4/: main.cpp
cpp/day5/: main.cpp
cpp/day6/: main.cpp
cpp/day7/: main.cpp
cpp/day8/: main.cpp
cpp/day9/: main.cpp
cpp/utils/: timer.cpp  timer.h  utils.h
rs/: Cargo.toml  README.md
rs/day1/: Cargo.toml
rs/day1/src/: main.rs
rs/day10/: Cargo.toml
rs/day10/src/: main.rs
rs/day11/: Cargo.toml
rs/day11/src/: main.rs
rs/day12/: Cargo.toml
rs/day12/src/: main.rs
rs/day13/: Cargo.toml
rs/day13/src/: main.rs
rs/day14/: Cargo.toml
rs/day14/src/: main.rs
rs/day15/: Cargo.toml
rs/day15/src/: board.rs  main.rs  part1board.rs  part2board.rs
rs/day16/: Cargo.toml
rs/day16/src/: main.rs
rs/day17/: Cargo.toml
rs/day17/src/: main.rs
rs/day18/: Cargo.toml
rs/day18/src/: main.rs
rs/day19/: Cargo.toml
rs/day19/src/: main.rs
rs/day2/: Cargo.toml
rs/day2/src/: main.rs
rs/day20/: Cargo.toml
rs/day20/src/: main.rs
rs/day3/: Cargo.toml
rs/day3/src/: main.rs
rs/day4/: Cargo.toml
rs/day4/src/: main.rs
rs/day5/: Cargo.toml
rs/day5/src/: main.rs
rs/day6/: Cargo.toml
rs/day6/src/: main.rs
rs/day7/: Cargo.toml
rs/day7/src/: main.rs
rs/day8/: Cargo.toml
rs/day8/src/: main.rs
rs/day9/: Cargo.toml
rs/day9/src/: main.rs
rs/utils/src/: timer.rs
