lib_LIBRARIES = libutils.a
libutils_a_SOURCES = \
    utils/timer.cpp

bin_PROGRAMS = \
    day1-part1 \
    day1-part2 \
    day2-part1 \
    day2-part2 \
    day3-part1 \
    day3-part2 \
    day4-part1 \
    day4-part2 \
    day5-part1 \
    day5-part2 \
    day6-part1 \
    day6-part2

day1_part1_LDADD = libutils.a
day1_part1_SOURCES = \
    day1/main.cpp

day1_part2_LDADD = libutils.a
day1_part2_SOURCES = \
    day1/main.cpp
day1_part2_CPPFLAGS = -DAOC_PART2


day2_part1_LDADD = libutils.a
day2_part1_SOURCES = \
    day2/main.cpp

day2_part2_LDADD = libutils.a
day2_part2_SOURCES = \
    day2/main.cpp
day2_part2_CPPFLAGS = -DAOC_PART2


day3_part1_LDADD = libutils.a
day3_part1_SOURCES = \
    day3/main.cpp

day3_part2_LDADD = libutils.a
day3_part2_SOURCES = \
    day3/main.cpp
day3_part2_CPPFLAGS = -DAOC_PART2


day4_part1_LDADD = libutils.a
day4_part1_SOURCES = \
    day4/main.cpp

day4_part2_LDADD = libutils.a
day4_part2_SOURCES = \
    day4/main.cpp
day4_part2_CPPFLAGS = -DAOC_PART2


day5_part1_LDADD = libutils.a
day5_part1_SOURCES = \
    day5/main.cpp

day5_part2_LDADD = libutils.a
day5_part2_SOURCES = \
    day5/main.cpp
day5_part2_CPPFLAGS = -DAOC_PART2


day6_part1_LDADD = libutils.a
day6_part1_SOURCES = \
    day6/main.cpp

day6_part2_LDADD = libutils.a
day6_part2_SOURCES = \
    day6/main.cpp
day6_part2_CPPFLAGS = -DAOC_PART2
