AM_CXXFLAGS=-std=c++20

lib_LIBRARIES = libutils.a
libutils_a_SOURCES = \
    utils/timer.cpp

bin_PROGRAMS = \
    day1-part1 \
    day1-part2 \
    day2-part1 \
    day2-part2 \
    day3-part1 \
    day3-part2 \
    day4-part1 \
    day4-part2 \
    day5-part1 \
    day5-part2 \
    day6-part1 \
    day6-part2 \
    day7-part1 \
    day7-part2 \
    day8-part1 \
    day8-part2 \
    day9-part1 \
    day9-part2 \
    day10-part1 \
    day10-part2 \
    day11-part1 \
    day11-part2 \
    day12-part1 \
    day12-part2 \
    day13-part1 \
    day13-part2

day1_part1_LDADD = libutils.a
day1_part1_SOURCES = \
    day1/main.cpp

day1_part2_LDADD = libutils.a
day1_part2_SOURCES = \
    day1/main.cpp
day1_part2_CPPFLAGS = -DAOC_PART2


day2_part1_LDADD = libutils.a
day2_part1_SOURCES = \
    day2/main.cpp

day2_part2_LDADD = libutils.a
day2_part2_SOURCES = \
    day2/main.cpp
day2_part2_CPPFLAGS = -DAOC_PART2


day3_part1_LDADD = libutils.a
day3_part1_SOURCES = \
    day3/main.cpp

day3_part2_LDADD = libutils.a
day3_part2_SOURCES = \
    day3/main.cpp
day3_part2_CPPFLAGS = -DAOC_PART2


day4_part1_LDADD = libutils.a
day4_part1_SOURCES = \
    day4/main.cpp

day4_part2_LDADD = libutils.a
day4_part2_SOURCES = \
    day4/main.cpp
day4_part2_CPPFLAGS = -DAOC_PART2


day5_part1_LDADD = libutils.a
day5_part1_SOURCES = \
    day5/main.cpp

day5_part2_LDADD = libutils.a
day5_part2_SOURCES = \
    day5/main.cpp
day5_part2_CPPFLAGS = -DAOC_PART2


day6_part1_LDADD = libutils.a
day6_part1_SOURCES = \
    day6/main.cpp

day6_part2_LDADD = libutils.a
day6_part2_SOURCES = \
    day6/main.cpp
day6_part2_CPPFLAGS = -DAOC_PART2


day7_part1_LDADD = libutils.a
day7_part1_SOURCES = \
    day7/main.cpp

day7_part2_LDADD = libutils.a
day7_part2_SOURCES = \
    day7/main.cpp
day7_part2_CPPFLAGS = -DAOC_PART2


day8_part1_LDADD = libutils.a
day8_part1_SOURCES = \
    day8/main.cpp

day8_part2_LDADD = libutils.a
day8_part2_SOURCES = \
    day8/main.cpp
day8_part2_CPPFLAGS = -DAOC_PART2


day9_part1_LDADD = libutils.a
day9_part1_SOURCES = \
    day9/main.cpp

day9_part2_LDADD = libutils.a
day9_part2_SOURCES = \
    day9/main.cpp
day9_part2_CPPFLAGS = -DAOC_PART2


day10_part1_LDADD = libutils.a
day10_part1_SOURCES = \
    day10/main.cpp

day10_part2_LDADD = libutils.a
day10_part2_SOURCES = \
    day10/main.cpp
day10_part2_CPPFLAGS = -DAOC_PART2


day11_part1_LDADD = libutils.a
day11_part1_SOURCES = \
    day11/main.cpp

day11_part2_LDADD = libutils.a
day11_part2_SOURCES = \
    day11/main.cpp
day11_part2_CPPFLAGS = -DAOC_PART2


day12_part1_LDADD = libutils.a
day12_part1_SOURCES = \
    day12/main.cpp

day12_part2_LDADD = libutils.a
day12_part2_SOURCES = \
    day12/main.cpp
day12_part2_CPPFLAGS = -DAOC_PART2


day13_part1_LDADD = libutils.a
day13_part1_SOURCES = \
    day13/main.cpp

day13_part2_LDADD = libutils.a
day13_part2_SOURCES = \
    day13/main.cpp
day13_part2_CPPFLAGS = -DAOC_PART2
